# portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  compose.prod.yml  compose.yml  config.example.toml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  ruff.toml  tailwind.config.js
config/locales/: en.toml
front/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front/src/: App.svelte  Projects.svelte  Timeline.svelte  config.ts  main.ts
locales/: en.toml  fr.toml
portfolio/: __init__.py  __main__.py  app.py  router.py
portfolio/templates/: 404.jinja2  index.jinja2
portfolio/templates/components/: header.jinja2  portfolio.jinja2  service.jinja2  step.jinja2
scripts/pre-commit/: formatter.bat  ruff.bat
src/: __init__.py  __main__.py  _email.py  app.py  cli.py  config.py  index.html  router.py
src/athrerank/: __init__.py  __main__.py  app.py  cli.py  routes.py  vite.py
src/config/: info.toml
src/config/locales/: en.toml  fr.toml
src/dataclass/: config.py  index.py  info.py  locale.py
src/dataclass/locales/: about.py  contact.py  education.py  experience.py  header.py  histories.py  portfolio.py
src/portfolio/: __init__.py  __main__.py  app.py  cli.py  routes.py  vite.py
src/static/: anchor.css  output.css
src/templates/: 404.jinja2  education.jinja2  footer.jinja2  header.jinja2  index.jinja2  portfolio.jinja2  response.jinja2
src/templates/components/: about.jinja2  contact.jinja2  education.jinja2  footer.jinja2  header.jinja2  histories.jinja2  portfolio.jinja2
src/templates/errors/: 404.jinja2
src/templates/responses/: 200-email.jinja2  404.jinja2  500.jinja2
static/: output.css
tests/: conftest.py  test_acceptation.py  test_acceptations.py
