[tool.poetry]
name = "tailgrids"
version = "0.1.0"
description = ""
authors = ["Athroniaeth <pierre.chaumont@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.3"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
